<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/shoppingListButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/shopping_list_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

    <Button
        android:id="@+id/drawButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/draw_button"
        app:layout_constraintEnd_toEndOf="@+id/shoppingListButton"
        app:layout_constraintStart_toStartOf="@+id/shoppingListButton"
        app:layout_constraintTop_toBottomOf="@+id/shoppingListButton" />

    <Button
        android:id="@+id/apiButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/api_button"
        app:layout_constraintEnd_toEndOf="@+id/drawButtonLayout"
        app:layout_constraintStart_toStartOf="@+id/drawButtonLayout"
        app:layout_constraintTop_toBottomOf="@+id/drawButtonLayout" />

    <Button
        android:id="@+id/apiExampleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="API EXAMPLE"
        app:layout_constraintEnd_toEndOf="@+id/drawButtonLayout"
        app:layout_constraintStart_toStartOf="@+id/drawButtonLayout"
        app:layout_constraintTop_toBottomOf="@+id/apiButton" />

    <Button
        android:id="@+id/viewButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/view_button"
        app:layout_constraintEnd_toEndOf="@+id/apiExampleButton"
        app:layout_constraintStart_toStartOf="@+id/apiExampleButton"
        app:layout_constraintTop_toBottomOf="@+id/apiExampleButton" />

    <Button
        android:id="@+id/drawButtonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/draw_button_layout"
        app:layout_constraintEnd_toEndOf="@+id/drawButton"
        app:layout_constraintStart_toStartOf="@+id/drawButton"
        app:layout_constraintTop_toBottomOf="@+id/drawButton" />

</android.support.constraint.ConstraintLayout>